p3/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  rules:
    - host: argo.cd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: so-long-ingress
  namespace: dev
spec:
  rules:
    - host: so.long
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: so-long
                port:
                  number: 8888
